--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -124,5 +124,4 @@ sympy-plots-for-*.tex/
 # WinEdt
 *.bak
 *.sav
-/homework2.pdf
-/homework1.pdf
+/tmp/
